--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "3-restapi_express",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
